--- a/client/app/celebrations/celebrations.html
+++ b/client/app/celebrations/celebrations.html
@@ -1,45 +1,44 @@
 <script>
-    function myFunction(button) {
-        var x = document.getElementById("test");
-        if (x.contentEditable == "true") {
-            x.contentEditable = "false";
-            button.innerHTML = "Enable content of p to be editable!";
-        } else {
-            x.contentEditable = "true";
-            button.innerHTML = "Disable content of p to be editable!";
-        }
-    }
-    </script>
-<div id="container">
-    <div id="content">
-        <div class="container">
-            <div class="project-page row">
-                <div class="project-media col-md-8">
-                    <div class="item">
-                        <a class="lightbox" data-lightbox-gallery="gallery2">
-                            <img alt="" src="assets/images/1975038_10106333156595231_8212250341188656243_n.jpg" style="width:100%;">
-                        </a>
+        var someVariable="test"
+</script>
+<div class="main" ng-controller="CelebrationsCtrl">
+    <div id="container">
+        <div id="content">
+            <div class="container">
+                <div class="project-page row">
+                    <div class="project-media col-md-8">
+                        <div class="item">
+                            <a class="lightbox" data-lightbox-gallery="gallery2">
+                                <img alt="" src="assets/images/1975038_10106333156595231_8212250341188656243_n.jpg" style="width:100%;">
+                            </a>
+                        </div>
                     </div>
-                </div>
+                    <div ng-init="getText()">
+                            <tr ng-repeat="ng-repeat=text in literalText">
+                                    <td>{{text.literalText}}</td>
+                            </tr>
+                    </div>
+                   
+                    <div  class="project-content col-md-4">
+                        <h4><span>Celebrations</span></h4>
+                        <button onclick="myFunction(this,'celebrationDescriptText');" ng-click="submit('celebrationDescriptText')">Submit Changes</button>
+                        <p id="celebrationDescriptText" contenteditable="true">At Essence Events, we help plan your lifetime celebrations! Whether you are planning a beautiful baby shower, a memorable graduation, or an astonishing anniversary, we are here to facilitate your every wish!</p>
+                        
+                        <h4><span>Examples</span></h4>
+                        <ul>
+                            <li><strong>Baby Shower</strong></li>
+                            <li><strong>Anniversary</strong></li>
+                            <li><strong>And More</strong></li>
+                        </ul>
+                    </div>
 
-                <div class="project-content col-md-4">
-                    <h4><span>Celebrations</span></h4>
-                    <button onclick="myFunction(this);">Disable content of p to be editable!</button>
-                    <p id="test" contenteditable="true">At Essence Events, we help plan your lifetime celebrations! Whether you are planning a beautiful baby shower, a memorable graduation, or an astonishing anniversary, we are here to facilitate your every wish!</p>
-                    <h4><span>Examples</span></h4>
-                    <ul>
-                        <li><strong>Baby Shower</strong></li>
-                        <li><strong>Anniversary</strong></li>
-                        <li><strong>And More</strong></li>
-                    </ul>
                 </div>
-
+                <blockquote><p>"Erma was amazing! I especially loved that she had
+                    great time management skills; she was personable, professional,
+                    and articulate. She had great etiquette skills, and she paid
+                    attention to small details."
+                </p><p><small>Sabrina &amp; Demetrius Peoples</small></p></blockquote>
             </div>
-            <blockquote><p>"Erma was amazing! I especially loved that she had
-                great time management skills; she was personable, professional,
-                and articulate. She had great etiquette skills, and she paid
-                attention to small details."
-            </p><p><small>Sabrina &amp; Demetrius Peoples</small></p></blockquote>
         </div>
     </div>
 </div>
