--- a/client/app/celebrations/celebrations.html
+++ b/client/app/celebrations/celebrations.html
@@ -13,19 +13,12 @@
                             </a>
                         </div>
                     </div>
-                    <div ng-init="getText('celebrationDescriptText')">
-                            <p id=celebrationDescriptText> </p>
-                            <tr ng-repeat="ng-repeat=text in literalText">
-                                    <td>{{text.literalText}}</td>
-                                    <td>Actual text </td>
-                            </tr>
-                    </div>
-                   
-                    <div  class="project-content col-md-4">
+
+                    <div ng-init="getText()" class="project-content col-md-4">
                         <h4><span>Celebrations</span></h4>
-                        <button onclick="myFunction(this,'celebrationDescriptText');" ng-click="submit('celebrationDescriptText')">Submit Changes</button>
-                        <p id="celebrationDescriptText" contenteditable="true">At Essence Events, we help plan your lifetime celebrations! Whether you are planning a beautiful baby shower, a memorable graduation, or an astonishing anniversary, we are here to facilitate your every wish!</p>
-                        
+                        <button class="btn btn-default" ng-keyup="$textToSubmit.keyCode == 13 && submit()">Submit Changes</button>
+                        <div id="celebrationDescriptText" contenteditable="true">{{literalText}}</div>
+                        <br></br>
                         <h4><span>Examples</span></h4>
                         <ul>
                             <li><strong>Baby Shower</strong></li>
