--- a/client/app/links/links.html
+++ b/client/app/links/links.html
@@ -6,7 +6,7 @@
       <tr>
       <td class="col-md-3">
         <a target="_target" href="{{link.url}}">
-          <img align ="center" ng-src="{{link.photo}}" class="linkImg">
+          <img align ="right" ng-src="{{link.photo}}" class="linkImg" height="150" width="150">
         </a>
 
       </td>
@@ -28,7 +28,7 @@
       <tr>
       <td  class="col-md-3">
         <a target="_target" href="{{link.url}}">
-          <img ng-src="{{link.photo}}" class="linkImg">
+          <img ng-src="{{link.photo}}" class="linkImg" height="150" width="150" align = "right">
         </a>
 
       </td>
